This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/17/26: SEM_4-3-0beta6
2/17/26: Fixed writing states in lines too long to read in earlier versions.
All versions between Jan. 27 and this should be replaced and this version
should be run to rewrite the settings before trying to run a version before
Jan 27.

2/16/26: Started showing dashed circles with estimated beam size, if
available, when defining Low Dose Focus/Trial position.

2/16/26: Added script command for storing image shift vectors in an individual
Navigator item and made Multiple Records able to acquire from item-specific
locations.

2/13/26: Added property 'SkipFocusRamper' to run dynamic focusing directly
from SerialEM instead of through FocusRamper.

2/12/26: Allowed multigrid to use a grid marked as too dark if the property
to skip realignment is set (In 4.2).

2/11/26: SEM_4-3-0beta5
2/11/26: Prevented image shift in blocks for grid map in multigrid (In 4.2).

2/11/26: Fixed crash turning on Edit Focus with no image in display (In 4.2).

2/10/26: Made display of beam circles in multishot display work with beam size
from calibrations on non-Titan scopes.

2/10/26: SEM_4-3-0beta4
2/10/26: Allowed multigrid to do grid map and medium mag maps in same run if a
script is set to run after the grid map is made, and final acquisition in the
same run as mapping if a script is set to run after mapping.

2/10/26: SEM_4-2-16
2/10/26: Made autocontouring dialog remember group selections between openings
with one SerialEM run.  Improved and clarified handling of group selections
wen using autocontouring from multigrid (in 4.2).

2/10/26: Fixed % C2 value displayed in Scope Status when spot size is changed
through Scope Control and there is no underlying intensity change (In 4.2).
